--- a/environment.yml
+++ b/environment.yml
@@ -1,121 +1,130 @@
 name: smth
 channels:
+  - pytorch
   - conda-forge
   - defaults
 dependencies:
-  - av=0.4.0=py36_0
-  - backcall=0.1.0=py_0
-  - bleach=3.0.1=py_0
-  - bzip2=1.0.6=h470a237_2
-  - cffi=1.11.5=py36h5e8e0c9_1
-  - decorator=4.3.0=py_0
-  - entrypoints=0.2.3=py36_1002
-  - ffmpeg=3.2.4=hf82bc7d_4
-  - ipykernel=5.1.0=pyh24bf2e0_0
-  - ipython=7.0.1=py36h24bf2e0_1000
-  - ipython_genutils=0.2.0=py_1
-  - ipywidgets=7.4.2=py_0
-  - jedi=0.13.1=py36_1000
-  - jinja2=2.10=py_1
-  - jsonschema=2.6.0=py36_1002
-  - jupyter=1.0.0=py_1
-  - jupyter_client=5.2.3=py_1
-  - jupyter_console=6.0.0=py_0
-  - jupyter_core=4.4.0=py_0
-  - libiconv=1.15=h470a237_3
-  - markupsafe=1.0=py36h470a237_1
-  - mistune=0.8.3=py36h470a237_2
-  - mkl_fft=1.0.6=py36_0
-  - mkl_random=1.0.1=py36_0
-  - nbconvert=5.3.1=py_1
-  - nbformat=4.4.0=py_1
-  - ninja=1.8.2=h2d50403_1
-  - notebook=5.7.0=py36_1000
-  - olefile=0.46=py_0
-  - pandocfilters=1.4.2=py_1
-  - parso=0.3.1=py_0
-  - pexpect=4.6.0=py36_1000
-  - pickleshare=0.7.5=py36_1000
-  - pip=18.1=py36_1000
-  - prometheus_client=0.4.1=py_0
-  - prompt_toolkit=2.0.5=py_0
-  - ptyprocess=0.6.0=py36_1000
-  - pycparser=2.19=py_0
-  - pygments=2.2.0=py_1
-  - python=3.6.6=h5001a0f_0
-  - python-dateutil=2.7.3=py_0
-  - pyzmq=17.1.2=py36hae99301_1
-  - qtconsole=4.4.1=py36_1
-  - send2trash=1.5.0=py_0
-  - setuptools=40.4.3=py36_0
-  - simplegeneric=0.8.1=py_1
-  - sip=4.19.8=py36hfc679d8_0
-  - six=1.11.0=py36_1001
-  - terminado=0.8.1=py36_1001
-  - testpath=0.4.2=py36_1000
-  - torchvision=0.2.1=py36_0
-  - tornado=5.1.1=py36h470a237_0
-  - traitlets=4.3.2=py36_1000
-  - wcwidth=0.1.7=py_1
-  - webencodings=0.5.1=py_1
-  - wheel=0.32.1=py36_0
-  - widgetsnbextension=3.4.2=py36_1000
-  - x264=1!152.20180717=h470a237_1
+  - _libgcc_mutex=0.1=main
+  - attrs=19.3.0=py_0
+  - av=6.2.0=py36h866369f_1
+  - backcall=0.1.0=py36_0
   - blas=1.0=mkl
-  - ca-certificates=2018.03.07=0
-  - certifi=2018.8.24=py36_1
-  - cudatoolkit=9.0=h13b8566_0
-  - cudnn=7.1.2=cuda9.0_0
+  - bleach=3.1.0=py36_0
+  - bzip2=1.0.8=h7b6447c_0
+  - ca-certificates=2019.10.16=0
+  - certifi=2019.9.11=py36_0
+  - cffi=1.13.0=py36h2e261b9_0
+  - cudatoolkit=10.1.168=0
   - cycler=0.10.0=py36_0
-  - dbus=1.13.2=h714fa37_1
+  - dbus=1.13.12=h746ee38_0
+  - decorator=4.4.0=py36_1
+  - defusedxml=0.6.0=py_0
+  - entrypoints=0.3=py36_0
   - expat=2.2.6=he6710b0_0
+  - ffmpeg=4.1.3=h167e202_0
   - fontconfig=2.13.0=h9420a91_0
   - freetype=2.9.1=h8a8886c_1
   - glib=2.56.2=hd408876_0
   - gmp=6.1.2=h6c8ec71_1
+  - gnutls=3.6.5=hd3a4fd2_1002
   - gst-plugins-base=1.14.0=hbbd80ab_1
   - gstreamer=1.14.0=hb453b48_1
   - icu=58.2=h9c2bf20_1
-  - intel-openmp=2019.0=118
+  - importlib_metadata=0.23=py36_0
+  - intel-openmp=2019.4=243
+  - ipykernel=5.1.2=py36h39e3cac_0
+  - ipython=7.8.0=py36h39e3cac_0
+  - ipython_genutils=0.2.0=py36_0
+  - ipywidgets=7.5.1=py_0
+  - jedi=0.15.1=py36_0
+  - jinja2=2.10.3=py_0
   - jpeg=9b=h024ee3a_2
-  - kiwisolver=1.0.1=py36hf484d3e_0
-  - libedit=3.1.20170329=h6b74fdf_2
+  - jsonschema=3.1.1=py36_0
+  - jupyter=1.0.0=py36_7
+  - jupyter_client=5.3.4=py36_0
+  - jupyter_console=6.0.0=py36_0
+  - jupyter_core=4.6.0=py36_0
+  - kiwisolver=1.1.0=py36he6710b0_0
+  - lame=3.100=h14c3975_1001
+  - libedit=3.1.20181209=hc058e9b_0
   - libffi=3.2.1=hd88cf55_4
-  - libgcc-ng=8.2.0=hdf63c60_1
+  - libgcc-ng=9.1.0=hdf63c60_0
   - libgfortran-ng=7.3.0=hdf63c60_0
-  - libpng=1.6.34=hb9fc6fc_0
+  - libiconv=1.15=h63c8f33_5
+  - libpng=1.6.37=hbc83047_0
   - libsodium=1.0.16=h1bed415_0
-  - libstdcxx-ng=8.2.0=hdf63c60_1
-  - libtiff=4.0.9=he85c1e1_2
+  - libstdcxx-ng=9.1.0=hdf63c60_0
+  - libtiff=4.0.10=h2733197_2
   - libuuid=1.0.3=h1bed415_2
   - libxcb=1.13=h1bed415_1
-  - libxml2=2.9.8=h26e45fe_1
-  - matplotlib=3.0.0=py36h5429711_0
-  - mkl=2019.0=118
-  - nccl=1.3.5=cuda9.0_0
-  - ncurses=6.1=hf484d3e_0
-  - numpy=1.15.2=py36h1d66e8a_1
-  - numpy-base=1.15.2=py36h81de0dd_1
-  - openssl=1.0.2p=h14c3975_0
+  - libxml2=2.9.9=hea5a465_1
+  - markupsafe=1.1.1=py36h7b6447c_0
+  - matplotlib=3.1.1=py36h5429711_0
+  - mistune=0.8.4=py36h7b6447c_0
+  - mkl=2019.4=243
+  - mkl-service=2.3.0=py36he904b0f_0
+  - mkl_fft=1.0.14=py36ha843d7b_0
+  - mkl_random=1.1.0=py36hd6b4f25_0
+  - more-itertools=7.2.0=py36_0
+  - nbconvert=5.6.0=py36_1
+  - nbformat=4.4.0=py36_0
+  - ncurses=6.1=he6710b0_1
+  - nettle=3.4.1=h1bed415_1002
+  - ninja=1.9.0=py36hfd86e86_0
+  - notebook=6.0.1=py36_0
+  - numpy=1.17.2=py36haad9e8e_0
+  - numpy-base=1.17.2=py36hde5b4d6_0
+  - olefile=0.46=py36_0
+  - openh264=1.8.0=hdbcaa40_1000
+  - openssl=1.1.1d=h7b6447c_3
   - pandoc=2.2.3.2=0
-  - pcre=8.42=h439df22_0
-  - pillow=5.3.0=py36h34e0f95_0
-  - pyparsing=2.2.2=py36_0
+  - pandocfilters=1.4.2=py36_1
+  - parso=0.5.1=py_0
+  - pcre=8.43=he6710b0_0
+  - pexpect=4.7.0=py36_0
+  - pickleshare=0.7.5=py36_0
+  - pillow=6.2.0=py36h34e0f95_0
+  - pip=19.3.1=py36_0
+  - prometheus_client=0.7.1=py_0
+  - prompt_toolkit=2.0.10=py_0
+  - ptyprocess=0.6.0=py36_0
+  - pycparser=2.19=py36_0
+  - pygments=2.4.2=py_0
+  - pyparsing=2.4.2=py_0
   - pyqt=5.9.2=py36h05f1152_2
-  - pytorch=0.4.1=py36ha74772b_0
-  - pytz=2018.5=py36_0
-  - qt=5.9.6=h8703b6f_2
+  - pyrsistent=0.15.4=py36h7b6447c_0
+  - python=3.6.9=h265db76_0
+  - python-dateutil=2.8.0=py36_0
+  - pytorch=1.3.0=py3.6_cuda10.1.243_cudnn7.6.3_0
+  - pytz=2019.3=py_0
+  - pyzmq=18.1.0=py36he6710b0_0
+  - qt=5.9.7=h5867ecd_1
+  - qtconsole=4.5.5=py_0
   - readline=7.0=h7b6447c_5
-  - scikit-learn=0.20.0=py36h4989274_1
-  - scipy=1.1.0=py36hfa4b5c9_1
-  - sqlite=3.25.2=h7b6447c_0
+  - send2trash=1.5.0=py36_0
+  - setuptools=41.4.0=py36_0
+  - sip=4.19.8=py36hf484d3e_0
+  - six=1.12.0=py36_0
+  - sqlite=3.30.1=h7b6447c_0
+  - terminado=0.8.2=py36_0
+  - testpath=0.4.2=py36_0
   - tk=8.6.8=hbc83047_0
+  - torchvision=0.4.1=py36_cu101
+  - tornado=6.0.3=py36h7b6447c_0
+  - traitlets=4.3.3=py36_0
+  - wcwidth=0.1.7=py36_0
+  - webencodings=0.5.1=py36_1
+  - wheel=0.33.6=py36_0
+  - widgetsnbextension=3.5.1=py36_0
+  - x264=1!152.20180806=h14c3975_0
   - xz=5.2.4=h14c3975_4
-  - zeromq=4.2.5=hf484d3e_1
-  - zlib=1.2.11=ha838bed_2
+  - zeromq=4.3.1=he6710b0_3
+  - zipp=0.6.0=py_0
+  - zlib=1.2.11=h7b6447c_3
+  - zstd=1.3.7=h0b5b093_0
   - pip:
-    - opencv-python==3.4.3.18
+    - opencv-python==4.1.1.26
     - scikit-video==1.1.11
-    - torch==0.4.1
-prefix: /home/rgoyal/miniconda3/envs/smth
+    - scipy==1.3.1
+prefix: /home/rgoyal14/miniconda3/envs/smth
 
